--- a/app/views/volunteers/new.html.erb
+++ b/app/views/volunteers/new.html.erb
@@ -1,5 +1,6 @@
+<h1 class="text-center"> Acidione um voluntario </h1>
+
 <%= simple_form_for @volunteer do |f| %>
   <%= f.input :name %>
-  <%= f.phone_number :phone_number %>
-  <%= f.submit "Create new Volunteer", class: 'btn btn-primary' %>
+  <%= f.submit "Criar voluntario", class: 'btn btn-primary' %>
 <% end %>
